Archive2/e7/8a889177d77651/output
In file included from /usr/include/c++/4.8/thread:35:0,
                 from main.cpp:3:
/usr/include/c++/4.8/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp:7:1: error: ‘mutex’ in namespace ‘std’ does not name a type
 std::mutex m;
 ^
main.cpp:8:1: error: ‘condition_variable’ in namespace ‘std’ does not name a type
 std::condition_variable cv;
 ^
main.cpp: In function ‘void worker_thread()’:
main.cpp:17:9: error: ‘unique_lock’ is not a member of ‘std’
         std::unique_lock<std::mutex> lk(m);
         ^
main.cpp:17:26: error: ‘mutex’ is not a member of ‘std’
         std::unique_lock<std::mutex> lk(m);
                          ^
main.cpp:17:41: error: ‘m’ was not declared in this scope
         std::unique_lock<std::mutex> lk(m);
                                         ^
main.cpp:17:42: error: ‘lk’ was not declared in this scope
         std::unique_lock<std::mutex> lk(m);
                                          ^
main.cpp:18:9: error: ‘cv’ was not declared in this scope
         cv.wait(lk, []{return ready;});
         ^
main.cpp:18:37: warning: lambda expressions only available with -std=c++11 or -std=gnu++11 [enabled by default]
         cv.wait(lk, []{return ready;});
                                     ^
main.cpp:26:9: error: ‘lock_guard’ is not a member of ‘std’
         std::lock_guard<std::mutex> lk(m);
         ^
main.cpp:26:25: error: ‘mutex’ is not a member of ‘std’
         std::lock_guard<std::mutex> lk(m);
                         ^
main.cpp:26:40: error: ‘m’ was not declared in this scope
         std::lock_guard<std::mutex> lk(m);
                                        ^
main.cpp:26:41: error: ‘lk’ was not declared in this scope
         std::lock_guard<std::mutex> lk(m);
                                         ^
main.cpp:30:5: error: ‘cv’ was not declared in this scope
     cv.notify_one();
     ^
main.cpp: In function ‘int main()’:
main.cpp:35:5: error: ‘thread’ is not a member of ‘std’
     std::thread worker(worker_thread);
     ^
main.cpp:35:17: error: expected ‘;’ before ‘worker’
     std::thread worker(worker_thread);
                 ^
main.cpp:40:9: error: ‘lock_guard’ is not a member of ‘std’
         std::lock_guard<std::mutex> lk(m);
         ^
main.cpp:40:25: error: ‘mutex’ is not a member of ‘std’
         std::lock_guard<std::mutex> lk(m);
                         ^
main.cpp:40:40: error: ‘m’ was not declared in this scope
         std::lock_guard<std::mutex> lk(m);
                                        ^
main.cpp:40:41: error: ‘lk’ was not declared in this scope
         std::lock_guard<std::mutex> lk(m);
                                         ^
main.cpp:44:5: error: ‘cv’ was not declared in this scope
     cv.notify_one();
     ^
main.cpp:48:9: error: ‘unique_lock’ is not a member of ‘std’
         std::unique_lock<std::mutex> lk(m);
         ^
main.cpp:48:26: error: ‘mutex’ is not a member of ‘std’
         std::unique_lock<std::mutex> lk(m);
                          ^
main.cpp:48:41: error: ‘m’ was not declared in this scope
         std::unique_lock<std::mutex> lk(m);
                                         ^
main.cpp:48:42: error: ‘lk’ was not declared in this scope
         std::unique_lock<std::mutex> lk(m);
                                          ^
main.cpp:49:41: warning: lambda expressions only available with -std=c++11 or -std=gnu++11 [enabled by default]
         cv.wait(lk, []{return processed;});
                                         ^
main.cpp:53:5: error: ‘worker’ was not declared in this scope
     worker.join();
     ^
